--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <h3> R89.00</h3>
    <div>
     <h5>Meaty: Chicken, Ham, Bacon, Beef</h5>
-    <h5>Veggie: Carrot, Mushroom, Tomato, Onion</h5>
+    <h5>Veggie: Carrot, Mushroom, Tomato, onion</h5>
    </div>
 </div>
 
