--- a/simplegrid-pizza.html
+++ b/simplegrid-pizza.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza History</title>
+    <title>Pizza Pizza</title>
     <link rel="stylesheet" href="simple-grid.css">
 </head>
 <body>
     <div class="container">
+    
         <center><h1>Perfect Pizza</h1></center>
+        
              <div class="Pizzas">
                  <div class="row">
                      <div class="col-4">
                          <h2>Small Pizza</h2>
+                         <div class="box">
                              Meaty: Chicken, Ham, Bacon, Beef
                              Veggie: Carrot, Mushroom, Tomato, Onion
                      </div>
+                    </div>
                      <div class="col-4">
                          <h2>Medium Pizza</h2>
                          Meaty: Chicken, Ham, Bacon, Beef
